Fixes bug where features section text overflows its bounds

--- a/src/app/features.module.css
+++ b/src/app/features.module.css
@@ -12,7 +12,7 @@
 .singleFeatureDiv {
   display: flex;
   position: relative;
-  width: auto;
+  width: 100%;
   height: auto;
   max-width: 1920px;
   justify-content: center;
